frontend/src/pages/event_page.css
@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Poppins:600");
@import url("https://fonts.googleapis.com/css2?family=Exo+2&family=Teko:wght@300&display=swap");

#eventsPage {
  overflow-y: auto;
  box-sizing: border-box;
  padding: 0 1vw;
  width: 100vw;
  height: 90vh;
  background: rgb(16, 28, 39);
  background: radial-gradient(circle,
      rgba(16, 28, 39, 1) 10%,
      rgba(0, 0, 0, 1) 90%);
  /* background-image: url('../assets/homePage/background_pattern_t3.png');
	background-repeat: repeat;
	background-size: 20%; */
  min-height: 90vh;
  display: grid;
}

#eventsPage .section-header {
  /* "EVENTS" */
  color: #84f4eb;
  font-family: "Share Tech", sans-serif;
  /* font-family: "Exo 2", sans-serif; */
  /* margin-left: auto; */
  margin-right: auto;
  font-size: 7vmin;
  font-weight: 900;
  top: 2vmin;
  /* margin-bottom: 0; */
  padding-left: 4vw;
}

:root {
  --background-dark: #2d3548;
  --text-light: rgba(255, 255, 255, 0.6);
  --text-lighter: rgba(255, 255, 255, 0.9);
  --spacing-s: 8px;
  --spacing-m: 16px;
  --spacing-l: 24px;
  --spacing-xl: 32px;
  --spacing-xxl: 64px;
  --width-container: 1200px;
}

* {
  border: 0;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  height: 100%;
  font-family: "Montserrat", sans-serif;
  font-size: 14px;
}

body {
  height: 100%;
}

.event_Hero-section {
  /* align-items: flex-start; */
  /* background-image: linear-gradient(15deg, #0f4667 0%, #2a6973 150%); */
  display: flex;
  /* min-height: 100%; */
  /* width: 100%; */
  justify-content: center;
  padding: var(--spacing-xl) var(--spacing-l);
}

.event_Card-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-column-gap: var(--spacing-xxl);
  grid-row-gap: var(--spacing-xl);
  /* max-width: var(--width-container); */
  max-width: 90%;
  width: 100%;
  font-weight: 800;
  opacity: 100%;
  /* text-shadow: 1px 1px 2px rgb(16, 28, 39); */
}

.event_Card {
  display: flex; 
  justify-content: space-between;
  list-style: none;
  position: relative;
  height: 300px;
}

.event_Card:before {
  content: "";
  display: block;
  /* padding-bottom: 150%; */
  width: 100%;
}

.event_Card-background {
  background-size: cover;
  background-position: center;
  border-radius: var(--spacing-l);
  bottom: 0;
  /* opacity: 0.9; */
  filter: brightness(0.5) saturate(1.2) contrast(0.85) blur(0.2px);
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  height: 250px;
  max-width: 100%;
  /* height: auto; */
  width: 100%;
  transform-origin: center;
  transform: scale(1) translateZ(0);
  transition: filter 200ms linear, transform 200ms linear,
    background 0.8s linear;
}

.card:hover .card__photo {
  transform: scale(1.1);
  -webkit-transform: scale(1.1);
}

/*
.blue_layer:before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #84f4eb;
  clip-path: circle(150px at -50% -50%);
  transition: 0.5s ease-in-out;
}

.blue_layer:hover:before {
  clip-path: circle(300px at 80% -20%);
}

.blue_layer:after {
  content: '';
  position: absolute;
  top: 30%;
  left: -20%;
} */
.event_Card:hover .event_Card-background {
  transform: scale(1.05) translateZ(0);
  top: -10px;
  bottom: 10px;
  box-shadow: 0 19px 38px #84f4eb, 0 15px 12px rgba(0, 0, 0, 0.22);
  /* background-position: left; */
  /* filter: unset; */
  /* filter:brightness(0.75) saturate(1.2) contrast(0.85) blur(0); */
  /* opacity: 90%; */
}

/* 
  All the non-hovered divs before the hovered one are selected using the first selector
  and all the non-hovered divs after the hovered one are selected using the second selector
*/
.event_Card:not(:hover):has( ~ .event_Card:hover) .event_Card-background, .event_Card:hover ~ .event_Card:not(:hover) .event_Card-background {
  /* filter: brightness(1.2) saturate(0) contrast(1.2) blur(15px); */
  filter: brightness(0.5) saturate(1.2) contrast(1.2) blur(15px);
}

.event_Card-content {
  left: 0;
  padding: var(--spacing-l);
  position: absolute;
  top: 0;
  right: 0;
  height: 200px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.event_Card-prize {
  color: var(--text-lighter);
  font-size: 1.5rem;
  margin-bottom: var(--spacing-s);
  text-transform: uppercase;
}

.event_Card-heading {
  width: 100%;
  color: var(--text-lighter);
  font-size: 1.9rem;
  font-weight: 800;
  opacity: 100%;
  /* text-shadow: 1px 1px 2px rgb(16, 28, 39); */
  line-height: 1.4;
  word-spacing: 100vw;
  hyphens: auto;
}
.event_Card-date {
  color: white;
  font-size: 1rem;
}

/* Button */
.button1 {
  display: flex;
  position: absolute;
  margin: 1em 0;
  left: 0px;
  bottom: 0px;
  /* padding: 0.5em 1.5em; */
  /* padding-right: 1.5em; */
  height: 10%;
  width: 49%;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
  background: #84f4eb;
  border-radius: 0.5em;
  text-transform: uppercase;
  font-family: "Work Sans", sans-serif;
  /* perspective: 500px; */
  font-size: 100%;
  transform-style: preserve-3d;
}
.button2 {
  display: flex;
  position: absolute;
  margin: 1em 0;
  right: 0px;
  bottom: 0px;
  /* padding: 0.5em 1.5em; */
  height: 10%;
  width: 49%;
  text-align: center;
  display: inline-block;
  cursor: pointer;
  background: #84f4eb;
  border-radius: 0.5em;
  text-transform: uppercase;
  font-family: "Work Sans", sans-serif;
  /* perspective: 500px; */
  transform-style: preserve-3d;
}
.button2:before,
.button2:after {
  --z: 0px;
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  content: "";
  width: 100%;
  height: 100%;
  opacity: 0;
  /* mix-blend-mode: inherit; */
  mix-blend-mode: color-dodge;
  border-radius: inherit;
  transform-style: preserve-3d;
  transform: translate3d(
    calc(var(--z) * 0px),
    calc(var(--z) * 0px),
    calc(var(--z) * 0px)
  );
}
.button1:before,
.button1:after {
  --z: 0px;
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  content: "";
  width: 100%;
  height: 100%;
  opacity: 0;
  /* mix-blend-mode: inherit; */
  mix-blend-mode: color-dodge;
  border-radius: inherit;
  transform-style: preserve-3d;
  transform: translate3d(
    calc(var(--z) * 0px),
    calc(var(--z) * 0px),
    calc(var(--z) * 0px)
  );
}
.button2:after,
.button1:after {
  background-color: rgb(16, 28, 39);
}
/* .button2:before {
	 background-color: #84f4eb;
} */
.button2:hover,
.button1:hover {
  background-color: white;
  transition: background 0.3s 0.1s;
}
.button2:hover:before {
  --z: 0.04;
  animation: translateWobble 2.2s ease forwards;
}
.button2:hover:after,
.button1:hover:after {
  --z: -0.04;
  animation: translateWobble 2.2s ease forwards;
}
@keyframes translateWobble {
  0% {
    opacity: 0;
    transform: translate3d(
      calc(var(--z) * 0px),
      calc(var(--z) * 0px),
      calc(var(--z) * 0px)
    );
  }
  16% {
    transform: translate3d(
      calc(var(--z) * 160px),
      calc(var(--z) * 160px),
      calc(var(--z) * 160px)
    );
  }
  28% {
    opacity: 1;
    transform: translate3d(
      calc(var(--z) * 70px),
      calc(var(--z) * 70px),
      calc(var(--z) * 70px)
    );
  }
  44% {
    transform: translate3d(
      calc(var(--z) * 130px),
      calc(var(--z) * 130px),
      calc(var(--z) * 130px)
    );
  }
  59% {
    transform: translate3d(
      calc(var(--z) * 85px),
      calc(var(--z) * 85px),
      calc(var(--z) * 85px)
    );
  }
  73% {
    transform: translate3d(
      calc(var(--z) * 110px),
      calc(var(--z) * 110px),
      calc(var(--z) * 110px)
    );
  }
  88% {
    opacity: 1;
    transform: translate3d(
      calc(var(--z) * 90px),
      calc(var(--z) * 90px),
      calc(var(--z) * 90px)
    );
  }
  100% {
    opacity: 1;
    transform: translate3d(
      calc(var(--z) * 100px),
      calc(var(--z) * 100px),
      calc(var(--z) * 100px)
    );
  }
}

@media (max-width: 600px) {
  .event_Card {
    height: 250px;
    width: 90%;
    margin: auto;
    /* overflow: hidden; */
  }
  .event_Card-grid {
  grid-template-columns: repeat(1, 1fr);
  grid-row-gap: var(--spacing-xxl);
  }
  /* .event_Card:hover .event_Card-background {
    transform: none;
    top: 0;
    bottom: 0;
  } */
  .event_Card:hover .event_Card-background {
    transform: none;
    transition: none;
    background-position: center;
    /* filter: none; */
  }
  .event_Card-content {
    text-align: left;
  }
  .event_Card-prize {
    font-size: 1.5rem;
  }
  .event_Card-heading {
    font-size: 1.5rem;
  }
  .event_Card-date {
    font-size: 1.0rem;
  }
  .event_Card-grid:hover .event_Card:not(:hover) .event_Card-background {
    filter: brightness(0.5) saturate(1.2) contrast(0.85) blur(1px);
  }
  .button1{
    top: 100%;
  }
  .button2{
    top: 100%;
  }
}
@media (600px < width < 950px) {
  .event_Card-grid {
    grid-template-columns: repeat(2, 1fr);
  }
  .event_Card:hover .event_Card-background {
    transform: none;
    transition: none;
    background-position: center;
    /* filter: none; */
  }
  .event_Card-grid:hover .event_Card:not(:hover) .event_Card-background {
    /* filter: none; */
      filter: brightness(0.5) saturate(1.2) contrast(0.85) blur(1px);
  }
  .event_Card {
    height: 320px;
    /* overflow: hidden; */
  }
  /* .button2 {
    width: 50%;
    height: 50%;
  } */
}

@media (950px < width <=1205px) {
  .event_Card-grid {
    grid-template-columns: repeat(3, 1fr);
  }
  .event_Card {
    margin: auto;
    width: 90%;
  }
}

